# adwapach

./: Cargo.toml  README.md
src/: background.rs  comobj.rs  main.rs
src/application/: mod.rs  model.rs  view.rs  viewmodel.rs
src/egui/: application.rs  mod.rs  view.rs  window.rs
src/main_window/: application.rs  mod.rs  view.rs  window.rs
src/model/: application.rs  event.rs  mod.rs
src/mvvm/: event.rs  mod.rs
src/view/: application.rs  event.rs  mod.rs
src/windows/: mod.rs  notify_icon.rs  popup_menu.rs  wallpaper.rs
