[package]
name = "adwapach"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
anyhow = "1.0.56"
async-std = { version = "1.11.0", features = ["attributes"] }
egui = "0.17.0"
egui_wgpu_backend = "0.17.0"
egui-winit = "0.17.0"
epi = "0.17.0"
time = { version = "0.3.9", features = ["local-offset"] }
vek = "0.15.7"
wgpu = { version = "0.12.0" }
windows = { version = "0.35.0", features = [
    "alloc",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_UI_Shell",
] }
winit = "0.26.1"

egui_demo_lib = "0.17.0"
