[package]
name = "adwapach"
version = "0.1.0"
edition = "2021"
resolver = "2"

[profile.production]
inherits = "release"
lto = "fat"
strip = "debuginfo"
panic = "abort"

[dependencies]
anyhow = "1.0.56"
egui = "0.17.0"
egui_wgpu_backend = "0.17.0"
egui-winit = "0.17.0"
epi = "0.17.0"
image = "0.24.1"
log = "0.4.16"
pollster = "0.2.5"
time = { version = "0.3.9", features = ["local-offset"] }
uuid = { version = "1.0.0-alpha.1", features = ["v4"] }
vek = "0.15.7"
wgpu = { version = "0.12.0" }
windows = { version = "0.35.0", features = [
    "alloc",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_UI_Shell",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
] }
winit = "0.26.1"
