[package]
name = "adwapach"
version = "0.1.0"
edition = "2021"
resolver = "2"

[profile.production]
inherits = "release"
lto = "fat"
strip = "debuginfo"
panic = "abort"

[dependencies]
anyhow = "1.0.56"
confy = "0.4.0"
flexi_logger = "0.22.3"
egui = "0.17.0"
egui_wgpu_backend = "0.17.0"
egui-winit = "0.17.0"
epi = "0.17.0"
image = "0.24.1"
log = "0.4.16"
native-dialog = "0.6.3"
parking_lot = "0.12.0"
serde = { version = "1.0.136", features = ["derive"] }
time = { version = "0.3.9", features = ["local-offset"] }
tokio = { version = "1.17.0", features = ["full"] }
uuid = { version = "1.0.0-alpha.1", features = ["v4", "serde"] }
vek = "0.15.7"
wgpu = { version = "0.12.0" }
windows = { version = "0.35.0", features = [
    "alloc",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_UI_Shell",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
] }
winit = "0.26.1"
